2004-07-23  Dave McMurtrie  <davemcmurtrie@hotmail.com>

	* Version 1.2.2 released. 
	
2004-03-11  Dave McMurtrie  <davemcmurtrie@hotmail.com>

	* imapproxy.h: Changed size of select cache buffer.

	* select.c: updated "safe" command list.  Changed behavior when
	  Populate_Select_Cache() fails so the client isn't sent a BAD.
	
2004-02-24  Dave McMurtrie  <davemcmurtrie@hotmail.com>

	* config.c: Added 'enable_select_cache' config option.

	* pimpstat.c: Added SELECT cache stuff.

	* icc.c: Send LOGOUT to imap server before closing a connection.

	* select.c: newly added to the distribution.  Source file containing
	  routines to allow SELECT caching.

	* main.c: Added new function ParseBannerAndCapability.  Added SELECT
	  caching stuff.

	* request.c: Added support for SELECT caching.

	* imapproxy.h: Added support for SELECT caching.

	* imapproxy.conf: Added 'enable_select_cache' option to the default
	  configuration file.
	
2003-11-14  Dave McMurtrie  <davemcmurtrie@hotmail.com>

	* imapproxy.h: Included patches by Geoffrey Hort <g.hort@unsw.edu.au>
	  to allow configurable listen address.

	* imapproxy.h: Changed default buffer size from 1024 to 4096.

	* imapproxy.conf: Patch by Geoffrey Hort <g.hort@unsw.edu.au> to
	  include default listen_address config option.

	* config.c: Patch by Geoffrey Hort <g.hort@unsw.edu.au> to allow
	  configurable listen address.

	* main.c: Patch by Geoffrey Hort <g.hort@unsw.edu.au> to allow
	  configurable listen address.

	* main.c: Updated prior patch (2003-10-10) by Ken Murchison.  The
	  token we're discarding is now "SASL-IR" instead of "SASL".
	
2003-11-07  Dave McMurtrie  <davemcmurtrie@hotmail.com>

	* Version 1.2.1 released.
	
2003-10-23  Dave McMurtrie  <davemcmurtrie@hotmail.com>

	* config.c: Fixed bug in SetBooleanValue doing upcase of Value.
	
2003-10-22  Dave McMurtrie  <davemcmurtrie@hotmail.com>

	* imapcommon.c: Fixed for loop for string literal detection.
	  explicitly clear errno prior to atol() call.
	